Fix left over dependencies from io_plugins and update CI worflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -73,10 +73,10 @@ jobs:
         run: |
           pip install ${{ env.PIP_ARGS }} .'${{ matrix.PIP_SELECTOR }}'
 
-      - name: Install rosettasciio
+      - name: Install RosettasScIO
         shell: bash
         run: |
-          pip install -e ./rosettasciio
+          pip install git+https://github.com/hyperspy/rosettasciio.git#egg=rosettasciio[all]
 
       - name: Pip list
         run: |
@@ -85,10 +85,6 @@ jobs:
       - name: Run test suite
         run: |
           pytest ${{ env.PYTEST_ARGS }} ${{ matrix.PYTEST_ARGS_COVERAGE }}
-
-      - name: Run test suite (rosettasciio)
-        run: |
-          pytest --pyargs rosettasciio
 
       - name: Upload coverage to Codecov
         if: ${{ always() }} && ${{ matrix.PYTEST_ARGS_COVERAGE }}
