--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,7 +71,7 @@ steps:
 
 - bash: |
     source activate $ENV_NAME
-    pip install -e ./rosettasciio
+    pip install git+https://github.com/hyperspy/rosettasciio.git#egg=rosettasciio[all]
     conda list
   displayName: Install package (rosettasciio)
 
@@ -81,11 +81,6 @@ steps:
     source activate $ENV_NAME
     pytest --mpl --pyargs hyperspy --reruns 3 --instafail --mpl-results-path $RESULT_IMAGES_FOLDER
   displayName: Run test suite
-
-- bash: |
-    source activate $ENV_NAME
-    pytest --pyargs rosettasciio --reruns 3 --instafail
-  displayName: Run test suite (rosettasciio)
 
 - publish: $(System.DefaultWorkingDirectory)/$(RESULT_IMAGES_FOLDER)
   artifact: $(Agent.JobName)-result_images
